--- a/package.json
+++ b/package.json
@@ -2,17 +2,32 @@
   "name": "react-webpack",
   "version": "0.0.3",
   "dependencies": {
-    "react": "~0.9.0"
+    "react": "^0.14.6",
+    "react-dnd": "^2.0.2",
+    "react-dnd-html5-backend": "^2.0.2",
+    "react-dom": "^0.14.6",
+    "react-redux": "^4.0.6"
   },
   "devDependencies": {
-    "gulp": "~3.5.2",
+    "babel": "^6.3.26",
+    "babel-cli": "^6.4.5",
+    "babel-core": "^6.4.5",
+    "babel-eslint": "^5.0.0-beta6",
+    "babel-loader": "^6.2.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "babel-preset-react-hmre": "^1.0.1",
+    "babel-preset-stage-0": "^6.3.13",
+    "css-loader": "^0.23.1",
+    "gulp": "^3.9.0",
     "gulp-clean": "~0.2.4",
-    "gulp-util": "~2.2.14",
-    "webpack": "~1.0.3",
-    "webpack-dev-server": "~1.2.3",
+    "gulp-util": "^3.0.7",
+    "jsx-loader": "~0.9.0",
+    "node-sass": "^3.4.2",
+    "sass-loader": "^3.1.2 ",
     "style-loader": "~0.6.2",
-    "css-loader": "~0.6.8",
-    "sass-loader": "0.0.1",
-    "jsx-loader": "~0.9.0"
+    "webpack": "^1.12.12",
+    "webpack-dev-server": "^1.14.1"
   }
 }
